talos-cluster/flux/apps/cloudflare-gateway/gateway-class.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: cloudflare
spec:
    controllerName: github.com/pl4nty/cloudflare-kubernetes-gateway
    parametersRef:
        group: ""
        kind: Secret
        namespace: cloudflare-gateway
        name: cloudflare
