talos-cluster/flux/apps/cloudflare-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    name: cloudflare-gateway
    namespace: cloudflare-gateway
spec:
    gatewayClassName: cloudflare
    listeners:
        - protocol: HTTP
          port: 80
          name: http
